Bug 250349 - Fix ASSERT crash in masonry-grid-template-columns-computed-withcontent.html
Summary: Fix ASSERT crash in masonry-grid-template-columns-computed-withcontent.html
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brandon
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-01-09 16:56 PST by Brandon
Modified: 2023-01-09 21:11 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brandon 2023-01-09 16:56:44 PST
Fix ASSERT crash in masonry-grid-template-columns-computed-withcontent.html
Comment 1 Brandon 2023-01-09 17:02:51 PST
Pull request: https://github.com/WebKit/WebKit/pull/8422
Comment 2 EWS 2023-01-09 21:10:31 PST
Committed 258700@main (929973a6b81a): <https://commits.webkit.org/258700@main>

Reviewed commits have been landed. Closing PR #8422 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-01-09 21:11:16 PST
<rdar://problem/104058806>