Fix ASSERT crash in masonry-grid-template-columns-computed-withcontent.html https://bugs.webkit.org/show_bug.cgi?id=250349

Reviewed by Matt Woodrow.

This test case was crashing due to an assert being triggered by m_autoRepeatTotalTracks being set to 0
in OrderedNamedLinesCollectorInGridLayout::collectLineNamesForIndex. The crash is caused by
set needs items placement, which was reseting the auto repeat tracks. We never set them again leading to the
crash later on.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderGrid.cpp:
(WebCore::RenderGrid::placeItemsOnGrid):

Canonical link: https://commits.webkit.org/258700@main